--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,408 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
+
+@font-face {
+  font-family: "GangwonEduSaeeum_OTFMediumA";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/GangwonEduSaeeum_OTFMediumA.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: "LeeSeoyun";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2202-2@1.0/LeeSeoyun.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@font-face {
+  font-family: "Minhye";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Minhye.woff")
+    format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+* {
+  font-family: "LeeSeoyun";
+}
+
+body {
+  background-color: #f6f6f6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Noto Sans KR", sans-serif;
+  min-height: 100vh;
+  margin: 0;
+}
+
+@media (min-width: 650px) {
+  .App {
+    width: 640px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
+@media (max-width: 650px) {
+  .App {
+    width: 90vw;
+  }
+}
+
+#root {
+  background-color: white;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.App {
   min-height: 100vh;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+/* MyButton */
+
+.MyButton {
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  font-size: 18px;
+  white-space: nowrap;
+}
+
+.MyButton_default {
+  background-color: #ececec;
+  color: black;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.MyButton_positive {
+  background-color: #64c964;
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.MyButton_negative {
+  background-color: #fd565f;
+  color: white;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+/* MyHeader */
+
+header {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #e2e2e2;
+}
+
+header > div {
+  display: flex;
+}
+
+header .head_text {
+  width: 50%;
+  font-size: 22px;
+  font-weight: 700;
+  justify-content: center;
+}
+
+header .head_btn_left {
+  width: 25%;
+  justify-content: start;
+}
+
+header .head_btn_right {
+  width: 25%;
+  justify-content: end;
+}
+
+/* DiaryList */
+
+.DiaryList .menu_wrapper {
+  margin-top: 20px;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.DiaryList .menu_wrapper .right_col {
+  flex-grow: 1;
+}
+
+.DiaryList .menu_wrapper .right_col button {
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 12px 20px;
+}
+
+.DiaryList .ControlMenu {
+  width: auto;
+  height: 100%;
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #ececec;
+  padding: 12px 20px;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 500;
+  text-align-last: center;
+  text-align: center;
+  -ms-text-align-last: center;
+  -moz-text-align-last: center;
+}
+
+/* DiaryItem */
+
+.DiaryItem {
+  padding: 15px 0;
+  border-bottom: 1px solid #e2e2e2;
+  display: flex;
+  justify-content: space-between;
+}
+
+.DiaryItem .emotion_img_wrapper {
+  cursor: pointer;
+  min-width: 120px;
+  height: 80px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.DiaryItem .emotion_img_wrapper img {
+  width: 65px;
+  height: 65px;
+}
+
+.emotion_img_wrapper_1 {
+  background-color: #fb9d9d;
+}
+
+.emotion_img_wrapper_2 {
+  background-color: #fbf790;
+}
+
+.emotion_img_wrapper_3 {
+  background-color: #aef09a;
+}
+
+.emotion_img_wrapper_4 {
+  background-color: #84abef;
+}
+
+.emotion_img_wrapper_5 {
+  background-color: #f23737;
+}
+
+.DiaryItem .info_wrapper {
+  cursor: pointer;
+  flex-grow: 1;
+  margin-left: 20px;
+}
+
+.DiaryItem .diary_date {
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.DiaryItem .diary_content_preview {
+  font-size: 18px;
+  font-weight: 18px;
+}
+
+.DiaryItem .btn_wrapper {
+  min-width: 70px;
+}
+
+/* DiaryEditor */
+
+.DiaryEditor_bottom {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+}
+
+.DiaryEditor section {
+  margin-bottom: 40px;
+}
+
+.DiaryEditor h4 {
+  font-size: 21px;
+  font-weight: 600;
+}
+
+.DiaryEditor .input_date {
+  border: none;
+  border-radius: 5px;
+  background-color: #ececec;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 17px;
+}
+
+.DiaryEditor textarea {
+  font-size: 21px;
+  box-sizing: border-box;
+  width: 100%;
+  min-height: 200px;
+  resize: vertical;
+  border: none;
+  border-radius: 5px;
+  background-color: #ececec;
+  padding: 20px;
+}
+
+.DiaryEditor .control_box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+/* Emotion Item */
+
+.EmotionItem {
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.EmotionItem img {
+  width: 50%;
+  margin-bottom: 10px;
+}
+
+.EmotionItem span {
+  font-size: 17px;
+  font-weight: 500;
+}
+
+.emotion_list_wrapper {
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  gap: 2%;
+}
+
+.EmotionItem_off {
+  background-color: #ececec;
+}
+
+.EmotionItem_on_1 {
+  background-color: #fb9d9d;
+  color: #ffffff;
+}
+
+.EmotionItem_on_2 {
+  background-color: #fbf790;
+  color: #ffffff;
+}
+
+.EmotionItem_on_3 {
+  background-color: #aef09a;
+  color: #ffffff;
+}
+
+.EmotionItem_on_4 {
+  background-color: #84abef;
+  color: #ffffff;
+}
+
+.EmotionItem_on_5 {
+  background-color: #f23737;
+  color: #ffffff;
+}
+
+/* Diary */
+.DiaryPage_bottom {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+}
+
+.DiaryPage section {
+  width: 100%;
+  margin-bottom: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.DiaryPage h4 {
+  font-size: 21px;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.DiaryPage .diary_img_wrapper {
+  background-color: #ececec;
+  width: 230px;
+  height: 230px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.DiaryPage .diary_img_wrapper img {
+  width: 120px;
+}
+
+.DiaryPage .emotion_descript {
+  font-size: 20px;
+  color: #ffffff;
+}
+
+.DiaryPage .diary_img_wrapper_1 {
+  background-color: #fb9d9d;
+}
+
+.DiaryPage .diary_img_wrapper_2 {
+  background-color: #fbf790;
+}
+
+.DiaryPage .diary_img_wrapper_3 {
+  background-color: #aef09a;
+}
+
+.DiaryPage .diary_img_wrapper_4 {
+  background-color: #84abef;
+}
+
+.DiaryPage .diary_img_wrapper_5 {
+  background-color: #f23737;
+}
+
+.DiaryPage .diary_content_wrapper {
+  width: 100%;
+  background-color: #ececec;
+  border-radius: 5px;
+  word-break: keep-all;
+  overflow-wrap: break-word;
+}
+.DiaryPage .diary_content_wrapper p {
+  padding: 20px;
+  text-align: left;
+  font-size: 21px;
+  font-weight: 500;
+  line-height: 2.5;
 }
